project/test/semantics/unit/good/Good24_shouldPassSuccesfullyThroughTrueAssertions.ty
singleton class SystemTest {
    
    actions: {
    
        main: () -> Int = {
            System#assert(2 + 2 == 4)
            val actual: Int = 43;
            System#assert(True)
            System#assert(actual == 43)
            System#assert(2 < 5)
            2 + 2 // 4
        }
    }
}
